# solaris-tools

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt
pointing/: altaz_scan_error.py
scripts/: check_errors_over_time.py
solaris_tools/scripts/: check_errors_over_time.py
tests/: test_altaz_scan_error.py
